--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,8 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  --first-color: #069C54;
-  --first-color-alt: #048654;
+  --first-color: #9c1006;
+  --first-color-alt: #9c1006;
   --title-color: #393939;
   --text-color: #707070;
   --text-color-light: #A6A6A6;
@@ -226,7 +226,7 @@ img{
   justify-content: center;
   align-items: center;
   padding: .3rem;
-  background: rgba(6,156,84,.5);
+  background: #9c1006;
   border-radius: .4rem;
   z-index: var(--z-tooltip);
   transition: .4s;
